@@ -39,3 +39,13 @@ log4j.appender.inserted_xdbs.layout=org.apache.log4j.PatternLayout
 log4j.appender.inserted_xdbs.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.inserted_xdbs.DatePattern='.'yyyy-MM
 log4j.appender.inserted_xdbs.Append=true
+
+######## transcript versions
+log4j.logger.transcriptVersions=debug, transcriptVersions
+log4j.additivity.transcriptVersions=false
+log4j.appender.transcriptVersions=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.transcriptVersions.DatePattern='.'yyyy-MM
+log4j.appender.transcriptVersions.Append=true
+log4j.appender.transcriptVersions.File=logs/transcriptVersions.log
+log4j.appender.transcriptVersions.layout=org.apache.log4j.PatternLayout
+log4j.appender.transcriptVersions.layout.ConversionPattern=[%d] - %m%n
